fixes letter spacing everywhere

--- a/app/assets/stylesheets/usts.css.scss
+++ b/app/assets/stylesheets/usts.css.scss
@@ -14,9 +14,6 @@ ul, li {list-style-type:none; margin:0; padding:0;}
 .ust-form .chord-quality {cursor:pointer; display: inline-block; min-width:160px; padding: 5px 10px; border: 1px solid #ccc; background-color: white; border-radius: 3px; margin-bottom:2px;}
 .ust-form ul > li {line-height:1.5em; margin-bottom:8px;}
 
-span.narrow {margin-left:-3px; margin-right:-2px;}
-span.maj7 {font-size:90%;}
-
 table.progression {width:100%; border-collapse:collapse;}
 table.progression td {font-weight:500; font-family:'Ubuntu'; letter-spacing:-0.5px; font-size:150%; white-space:nowrap; padding: 15px 1px 15px 5px;}
 table.progression tr:nth-child(odd){background-color:#eee;}
@@ -33,8 +30,13 @@ footer a:link, footer a:visited {color:#444;}
   table.progression td {font-size:120%;}
   .ust-form .extensions {display:block;}
   .chord-quality {width:100%;}
+  span.narrow {margin-left:-3px; margin-right:-2px;}
+  span.maj7 {font-size:90%;}
 }
 
 @media all and (max-width: 450px) {
   table.progression td {font-size:100%;}
+}
+@media all and (min-width: 450px) {
+  span.maj7 {font-size:90%; position:relative; top:-2px;}
 }
